--- a/page.html
+++ b/page.html
@@ -5,7 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <t1>Test</t1>
-    <a href="page.html">Go to page</a>
+    <h1>Page 1</h1>
 </body>
 </html>
